WebRTC: Initial testing of updated RTCPeerConnection API https://bugs.webkit.org/show_bug.cgi?id=151304

Reviewed by Eric Carlson.

Source/WebCore:

Add an empty implementation of MediaEndpointPeerConnection which
realizes the PeerConnectionBackend interface. This makes it possible
to construct an RTCPeerConnection and do initial testing.

Tests: fast/mediastream/RTCPeerConnection-overloaded-operations-params.html
       fast/mediastream/RTCPeerConnection-overloaded-operations.html

Also unskip three existing RTCPeerConnection tests on GTK.

* CMakeLists.txt:
* Modules/mediastream/MediaEndpointPeerConnection.cpp: Added.
(WebCore::createMediaEndpointPeerConnection):
(WebCore::MediaEndpointPeerConnection::MediaEndpointPeerConnection):
(WebCore::MediaEndpointPeerConnection::createOffer):
(WebCore::MediaEndpointPeerConnection::createAnswer):
(WebCore::MediaEndpointPeerConnection::setLocalDescription):
(WebCore::MediaEndpointPeerConnection::localDescription):
(WebCore::MediaEndpointPeerConnection::currentLocalDescription):
(WebCore::MediaEndpointPeerConnection::pendingLocalDescription):
(WebCore::MediaEndpointPeerConnection::setRemoteDescription):
(WebCore::MediaEndpointPeerConnection::remoteDescription):
(WebCore::MediaEndpointPeerConnection::currentRemoteDescription):
(WebCore::MediaEndpointPeerConnection::pendingRemoteDescription):
(WebCore::MediaEndpointPeerConnection::setConfiguration):
(WebCore::MediaEndpointPeerConnection::addIceCandidate):
(WebCore::MediaEndpointPeerConnection::getStats):
(WebCore::MediaEndpointPeerConnection::stop):
(WebCore::MediaEndpointPeerConnection::markAsNeedingNegotiation):
* Modules/mediastream/MediaEndpointPeerConnection.h: Added.
* WebCore.xcodeproj/project.pbxproj:

LayoutTests:

Add two new tests and unskip three old ones (details below).

* fast/mediastream/RTCPeerConnection-overloaded-operations-expected.txt: Added.
* fast/mediastream/RTCPeerConnection-overloaded-operations-params-expected.txt: Added.
* fast/mediastream/RTCPeerConnection-overloaded-operations-params.html: Added.
Feeds some good but mostly bad input to the overloaded operations to verify JS built-ins
argument checking.
* fast/mediastream/RTCPeerConnection-overloaded-operations.html: Added.
Verifies that the correct overloaded operation is invoked. For examaple, createOffer()
without arguments should invoke the promise based function, but the same operation with
two function arguments should invoke the legacy callback version.
* platform/gtk/TestExpectations:
Unskip fast/mediastream/RTCIceCandidate.html, fast/mediastream/RTCPeerConnection.html
and fast/mediastream/RTCSessionDescription.html.


Canonical link: https://commits.webkit.org/169546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192575 268f45cc-cd09-0410-ab3c-d52691b4dbfc